# ai_agent

./: .gitignore  pyproject.toml
src/: settings.py
src/ai_agent/: react_agent.py
src/ai_agent/tools/: __init__.py  client_profile_tool.py  consultation_tool.py  price_list_tool.py
src/di/providers/: langchain_provider.py
src/infrastructure/elasticsearch/: vector_stores.py
