[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.5.3",
    "fastapi[all]>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-elasticsearch>=0.3.2",
    "langchain-gigachat>=0.3.10",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.3.30",
    "redis>=5.2.1",
]
